Assignment2/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------


rule 28 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Program                        (0)
	Program -> Rules                                   (1)
	Rules ->                                           (2)
	Rules -> Rule Rules                                (3)
	Rule -> PIdent PArrow Commands PDot                (4)
	Commands ->                                        (5)
	Commands -> Command                                (6)
	Commands -> Command PComma Commands                (7)
	Command -> PGo                                     (8)
	Command -> PTake                                   (9)
	Command -> PMark                                   (10)
	Command -> PNothing                                (11)
	Command -> PTurn Direction                         (12)
	Command -> PCase Direction POf Alts PEnd           (13)
	Command -> PIdent                                  (14)
	Direction -> PLeft                                 (15)
	Direction -> PRight                                (16)
	Direction -> PFront                                (17)
	Alts ->                                            (18)
	Alts -> Alt                                        (19)
	Alts -> Alt PSemicolon Alts                        (20)
	Alt -> Pat PArrow Commands                         (21)
	Pat -> PEmpty                                      (22)
	Pat -> PLambda                                     (23)
	Pat -> PDebris                                     (24)
	Pat -> PAsteroid                                   (25)
	Pat -> PBoundary                                   (26)
	Pat -> PUnderscore                                 (27)
	Identifier -> PIdent                               (28)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	PArrow         { L.Arrow }
	PDot           { L.Dot }
	PComma         { L.Comma }
	PGo            { L.Go }
	PTake          { L.Take }
	PMark          { L.Mark }
	PNothing       { L.Nothingg }
	PTurn          { L.Turn }
	PCase          { L.Case }
	POf            { L.Of }
	PEnd           { L.End }
	PLeft          { L.Leftt }
	PRight         { L.Rightt }
	PFront         { L.Front }
	PSemicolon     { L.Semicolon }
	PEmpty         { L.Empty }
	PLambda        { L.Lambda }
	PDebris        { L.Debris }
	PAsteroid      { L.Asteroid }
	PBoundary      { L.Boundary }
	PUnderscore    { L.Underscore }
	PIdent         { L.Ident $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Program         rule  1
	Rules           rules 2, 3
	Rule            rule  4
	Commands        rules 5, 6, 7
	Command         rules 8, 9, 10, 11, 12, 13, 14
	Direction       rules 15, 16, 17
	Alts            rules 18, 19, 20
	Alt             rule  21
	Pat             rules 22, 23, 24, 25, 26, 27
	Identifier      rule  28

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	PIdent         shift, and enter state 4
	%eof           reduce using rule 2

	Program        goto state 5
	Rules          goto state 2
	Rule           goto state 3

State 1


	PIdent         shift, and enter state 4

	Rules          goto state 2
	Rule           goto state 3

State 2

	Program -> Rules .                                  (rule 1)

	%eof           reduce using rule 1


State 3

	Rules -> Rule . Rules                               (rule 3)

	PIdent         shift, and enter state 4
	%eof           reduce using rule 2

	Rules          goto state 7
	Rule           goto state 3

State 4

	Rule -> PIdent . PArrow Commands PDot               (rule 4)

	PArrow         shift, and enter state 6


State 5

	%start_parseCalc -> Program .                       (rule 0)

	%eof           accept


State 6

	Rule -> PIdent PArrow . Commands PDot               (rule 4)

	PDot           reduce using rule 5
	PGo            shift, and enter state 10
	PTake          shift, and enter state 11
	PMark          shift, and enter state 12
	PNothing       shift, and enter state 13
	PTurn          shift, and enter state 14
	PCase          shift, and enter state 15
	PIdent         shift, and enter state 16

	Commands       goto state 8
	Command        goto state 9

State 7

	Rules -> Rule Rules .                               (rule 3)

	%eof           reduce using rule 3


State 8

	Rule -> PIdent PArrow Commands . PDot               (rule 4)

	PDot           shift, and enter state 23


State 9

	Commands -> Command .                               (rule 6)
	Commands -> Command . PComma Commands               (rule 7)

	PDot           reduce using rule 6
	PComma         shift, and enter state 22
	PEnd           reduce using rule 6
	PSemicolon     reduce using rule 6


State 10

	Command -> PGo .                                    (rule 8)

	PDot           reduce using rule 8
	PComma         reduce using rule 8
	PEnd           reduce using rule 8
	PSemicolon     reduce using rule 8


State 11

	Command -> PTake .                                  (rule 9)

	PDot           reduce using rule 9
	PComma         reduce using rule 9
	PEnd           reduce using rule 9
	PSemicolon     reduce using rule 9


State 12

	Command -> PMark .                                  (rule 10)

	PDot           reduce using rule 10
	PComma         reduce using rule 10
	PEnd           reduce using rule 10
	PSemicolon     reduce using rule 10


State 13

	Command -> PNothing .                               (rule 11)

	PDot           reduce using rule 11
	PComma         reduce using rule 11
	PEnd           reduce using rule 11
	PSemicolon     reduce using rule 11


State 14

	Command -> PTurn . Direction                        (rule 12)

	PLeft          shift, and enter state 18
	PRight         shift, and enter state 19
	PFront         shift, and enter state 20

	Direction      goto state 21

State 15

	Command -> PCase . Direction POf Alts PEnd          (rule 13)

	PLeft          shift, and enter state 18
	PRight         shift, and enter state 19
	PFront         shift, and enter state 20

	Direction      goto state 17

State 16

	Command -> PIdent .                                 (rule 14)

	PDot           reduce using rule 14
	PComma         reduce using rule 14
	PEnd           reduce using rule 14
	PSemicolon     reduce using rule 14


State 17

	Command -> PCase Direction . POf Alts PEnd          (rule 13)

	POf            shift, and enter state 25


State 18

	Direction -> PLeft .                                (rule 15)

	PDot           reduce using rule 15
	PComma         reduce using rule 15
	POf            reduce using rule 15
	PEnd           reduce using rule 15
	PSemicolon     reduce using rule 15


State 19

	Direction -> PRight .                               (rule 16)

	PDot           reduce using rule 16
	PComma         reduce using rule 16
	POf            reduce using rule 16
	PEnd           reduce using rule 16
	PSemicolon     reduce using rule 16


State 20

	Direction -> PFront .                               (rule 17)

	PDot           reduce using rule 17
	PComma         reduce using rule 17
	POf            reduce using rule 17
	PEnd           reduce using rule 17
	PSemicolon     reduce using rule 17


State 21

	Command -> PTurn Direction .                        (rule 12)

	PDot           reduce using rule 12
	PComma         reduce using rule 12
	PEnd           reduce using rule 12
	PSemicolon     reduce using rule 12


State 22

	Commands -> Command PComma . Commands               (rule 7)

	PDot           reduce using rule 5
	PGo            shift, and enter state 10
	PTake          shift, and enter state 11
	PMark          shift, and enter state 12
	PNothing       shift, and enter state 13
	PTurn          shift, and enter state 14
	PCase          shift, and enter state 15
	PEnd           reduce using rule 5
	PSemicolon     reduce using rule 5
	PIdent         shift, and enter state 16

	Commands       goto state 24
	Command        goto state 9

State 23

	Rule -> PIdent PArrow Commands PDot .               (rule 4)

	PIdent         reduce using rule 4
	%eof           reduce using rule 4


State 24

	Commands -> Command PComma Commands .               (rule 7)

	PDot           reduce using rule 7
	PEnd           reduce using rule 7
	PSemicolon     reduce using rule 7


State 25

	Command -> PCase Direction POf . Alts PEnd          (rule 13)

	PEnd           reduce using rule 18
	PEmpty         shift, and enter state 29
	PLambda        shift, and enter state 30
	PDebris        shift, and enter state 31
	PAsteroid      shift, and enter state 32
	PBoundary      shift, and enter state 33
	PUnderscore    shift, and enter state 34

	Alts           goto state 26
	Alt            goto state 27
	Pat            goto state 28

State 26

	Command -> PCase Direction POf Alts . PEnd          (rule 13)

	PEnd           shift, and enter state 37


State 27

	Alts -> Alt .                                       (rule 19)
	Alts -> Alt . PSemicolon Alts                       (rule 20)

	PEnd           reduce using rule 19
	PSemicolon     shift, and enter state 36


State 28

	Alt -> Pat . PArrow Commands                        (rule 21)

	PArrow         shift, and enter state 35


State 29

	Pat -> PEmpty .                                     (rule 22)

	PArrow         reduce using rule 22


State 30

	Pat -> PLambda .                                    (rule 23)

	PArrow         reduce using rule 23


State 31

	Pat -> PDebris .                                    (rule 24)

	PArrow         reduce using rule 24


State 32

	Pat -> PAsteroid .                                  (rule 25)

	PArrow         reduce using rule 25


State 33

	Pat -> PBoundary .                                  (rule 26)

	PArrow         reduce using rule 26


State 34

	Pat -> PUnderscore .                                (rule 27)

	PArrow         reduce using rule 27


State 35

	Alt -> Pat PArrow . Commands                        (rule 21)

	PGo            shift, and enter state 10
	PTake          shift, and enter state 11
	PMark          shift, and enter state 12
	PNothing       shift, and enter state 13
	PTurn          shift, and enter state 14
	PCase          shift, and enter state 15
	PEnd           reduce using rule 5
	PSemicolon     reduce using rule 5
	PIdent         shift, and enter state 16

	Commands       goto state 39
	Command        goto state 9

State 36

	Alts -> Alt PSemicolon . Alts                       (rule 20)

	PEnd           reduce using rule 18
	PEmpty         shift, and enter state 29
	PLambda        shift, and enter state 30
	PDebris        shift, and enter state 31
	PAsteroid      shift, and enter state 32
	PBoundary      shift, and enter state 33
	PUnderscore    shift, and enter state 34

	Alts           goto state 38
	Alt            goto state 27
	Pat            goto state 28

State 37

	Command -> PCase Direction POf Alts PEnd .          (rule 13)

	PDot           reduce using rule 13
	PComma         reduce using rule 13
	PEnd           reduce using rule 13
	PSemicolon     reduce using rule 13


State 38

	Alts -> Alt PSemicolon Alts .                       (rule 20)

	PEnd           reduce using rule 20


State 39

	Alt -> Pat PArrow Commands .                        (rule 21)

	PEnd           reduce using rule 21
	PSemicolon     reduce using rule 21


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 29
Number of terminals: 22
Number of non-terminals: 11
Number of states: 40
